--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href="https://github.com/rogersi502/defenders/blob/main/Defenders.pdf">Click Here Event Info</a></p>
+  <p><a href="https://github.com/rogersi502/defenders/blob/main/Defenders.pdf"></a></p>
 </html>
